samples/_failures_safe/1761697143_b1744f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e08f05c7.c: In function ‘main’:
./samples/SAFE/__tmp_e08f05c7.c:181:5: error: expected expression at end of input
  181 |     if (!fgets(input, sizeof(input),
      |     ^~
./samples/SAFE/__tmp_e08f05c7.c:181:5: error: expected declaration or statement at end of input
